project(peephole)
cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
#set(CMAKE_SYSROOT /home/anton/Documents/x-tools/arm-unknown-linux-gnueabi/arm-unknown-linux-gnueabi/sysroot)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=vfp -mfloat-abi=hard")

add_definitions(-DEGL_SERVER_DISPMANX)
add_definitions(-DHAVE_CMAKE_CONFIG)
add_definitions(-DHAVE_VMCS_CONFIG)
add_definitions(-DOMX_SKIP64BIT)
add_definitions(-DTV_SUPPORTED_MODE_NO_DEPRECATED)
add_definitions(-DUSE_VCHIQ_ARM)
add_definitions(-DVCHI_BULK_ALIGN=1)
add_definitions(-DVCHI_BULK_GRANULARITY=1)
add_definitions(-D_FILE_OFFSET_BITS=64)
add_definitions(-D_GNU_SOURCE)
add_definitions(-D_HAVE_SBRK)
add_definitions(-D_LARGEFILE64_SOURCE)
add_definitions(-D_LARGEFILE_SOURCE)
add_definitions(-D_REENTRANT)
add_definitions(-D__VIDEOCORE4__)
add_definitions(-DRPI2)

find_library(MMAL_CORE NAMES mmal_core PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(MMAL_UTIL NAMES mmal_util PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(MMAL_VC_CLIENT NAMES mmal_vc_client PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(VCSM NAMES vcsm PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(VCOS NAMES vcos PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(BCM_HOST NAMES bcm_host PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(VCHIQ NAMES vchiq_arm PATHS /home/anton/Documents/Projects/userland/build/lib)
find_library(VCHOSTIF NAMES vchostif PATHS /home/anton/Documents/Projects/userland/build/lib)


target_link_libraries(${PROJECT_NAME} stdc++ pthread dl rt X11 xcb avformat avcodec avutil swscale m ${MMAL_CORE} ${MMAL_UTIL} ${MMAL_VC_CLIENT} ${VCSM} ${VCOS} ${BCM_HOST} ${VCHIQ} ${VCHOSTIF})

set(CMAKE_VERBOSE_MAKEFILE ON)

include_directories(/home/anton/Documents/Projects/userland)
include_directories(/home/anton/Documents/Projects/userland/host_applications/linux/apps/raspicam)
include_directories(/home/anton/Documents/Projects/userland/host_applications/linux/libs/bcm_host/include)

set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS -Wl,-unresolved-symbols=ignore-in-shared-libs)
